--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -1,5 +1,5 @@
 % Dichiarazioni di ambiente e inclusione di pacchetti
-% da usare tramite il comando \input{hx-ambiente}
+% da usare tramite il comando \input{../../util/hx-ambiente}
 
 \documentclass[a4paper,titlepage]{article}
 \usepackage{accanthis} % scegliere da http://www.tug.dk/FontCatalogue/
@@ -11,3 +11,7 @@
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-vers}
 \usepackage{../../util/hx-front}
+
+\renewcommand{\arraystretch}{1.5}
+\setcounter{tocdepth}{4}
+\setcounter{secnumdepth}{4}
