--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -1,5 +1,5 @@
 % Frontespizio di ogni documento
-% da usare tramite il comando \usepackage{util/hx-front}
+% da usare tramite il comando \usepackage{../../util/hx-front}
 
 % parametrizzabile (nel file principale .tex) tramite i comandi:
 %    \author{\PB, \LB, \LS, ...}
