--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -1,3 +1,7 @@
+% Ultime versioni dei documenti
+% da usare tramite il comando \input{../../util/hx-vers}
+% da aggiornare con il comando ./versioni.sh (dalla cartella doc)
+
 \newcommand{\NdP}{Norme\_di\_progetto\_v\_0\_0\_3}
 \newcommand{\Verbali}{Verbali}
 \newcommand{\SdF}{Studio\_di\_fattibilita\_0\_0\_0}
