--- a/doc/Interni/Norme_di_progetto/diario.tex
+++ b/doc/Interni/Norme_di_progetto/diario.tex
@@ -1,11 +1,9 @@
 % diario delle modifiche per le norme di progetto
 % da includere con \include{diario}
 
-\begin{center}
-	\begin{tabular}{cp{3cm}cp{3cm}}
-	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
-	0.0.3 & {\MM} Amministratore & 26/12/2016 & iniziata stesura processi di sviluppo \\ \hline
-	0.0.2 & {\GG} Amministratore & 25/12/2016 & Iniziata la stesura dello scopo del documento e abbozzate alcune norme sulla documentazione \\ \hline
-	0.0.1 & {\MM} Amministratore & 24/12/2016 & Stesura scheletro \\ \hline
-	\end{tabular}
-\end{center}
+\begin{diario}
+	0.0.4 & {\GG} (amministratore) & 27/12/2016 & iniziata stesura processi di supporto \\ \hline
+	0.0.3 & {\MM} (amministratore) & 26/12/2016 & iniziata stesura processo di sviluppo \\ \hline
+	0.0.2 & {\GG} (amministratore) & 25/12/2016 & Iniziata la stesura dello scopo del documento e abbozzate alcune norme sulla documentazione \\ \hline
+	0.0.1 & {\MM} (amministratore) & 24/12/2016 & Stesura scheletro \\ \hline
+\end{diario}
