--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -2,7 +2,7 @@
 % da usare tramite il comando \input{../../util/hx-ambiente}
 
 \documentclass[a4paper,titlepage]{article}
-\usepackage{accanthis} % scegliere da http://www.tug.dk/FontCatalogue/
+% \usepackage{accanthis} % scegliere il font da http://www.tug.dk/FontCatalogue/
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,italian]{babel}
