--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
@@ -13,7 +13,7 @@
 \setcounter{secnumdepth}{4}
 
 \begin{document}
-\maketitle
+%\maketitle
 \include{diario}
 \tableofcontents
 
@@ -46,12 +46,145 @@
 
 
 \section{Analisi dei rischi}
-	\subsection{A}
-	\subsection{B}
-		\subsubsection{B1}
-		\subsubsection{B2}
-	\subsection{C}
-
+In questa sezione del documento vengono elencati e descritti tutti i possibili rischi che potrebbero colpire il gruppo Hivex nella realizzazione del prodotto \proj. Per gestire i rischi è stata attuata la seuente procedura che prevede:
+\begin{itemize}
+	\item \textbf{Identificazione dei rischi}: trovare i rischi potenziali che si possono presentare durante l'intero sviluppo del progetto e studiarne la natura. Tali rischi possono essere di tre tipologie:
+	\begin{enumerate}
+		\item \textbf{Progetto}: relativi a pianificazione, strumenti e risorse;
+		\item \textbf{Prodotto}: relativi a conformità e aspettative del commitente;
+		\item \textbf{Business}: relativi a costi e concorrenza.
+	\end{enumerate}
+	\item \textbf{Analisi dei rischi}: studiare per ogni rischio le:
+	\begin{enumerate}
+		\item \textbf{Probabilità di occorrenza};
+		\item \textbf{Conseguenze}: comprendere che peso hanno sul progetto per comprenderne le criticità.
+	\end{enumerate}
+	\item \textbf{Pianificazione di controllo e mitigazione}: istituire metodi di controllo per i rischi, così da poterli evitare facendo:
+	\begin{enumerate}
+		\item \textbf{Verifica costante del livello di rischio};
+		\item \textbf{Riconoscimento e trattamento}.
+	\end{enumerate}
+	\item \textbf{Attuazione nel periodo}: viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
+\end{itemize}
+Ciascun rischio viene identificato a:
+\begin{itemize}
+	\item \textbf{Livello tecnologico};
+	\item \textbf{Livello del personale};
+	\item \textbf{Livello organizzativo};
+	\item \textbf{Livello dei requisiti};
+	\item \textbf{Livello di valutazione dei costi}.
+\end{itemize}
+Per ogni rischio viene fornito un elenco di informazioni, necessario per comprenderne la natura. Esso comprende:
+\begin{itemize}
+	\item \textbf{Nome};
+	\item \textbf{Descrizione};
+	\item \textbf{Probabilità di occorrenza};
+	\item \textbf{Grado di pericolosità};
+	\item \textbf{Riconoscimento};
+	\item \textbf{Trattamento};
+	\item \textbf{Attuazione nel periodo}.
+\end{itemize}
+	\subsection{Livello tecnologico}
+		\subsubsection{Tecnologie adottate}
+		\begin{itemize}
+			\item \textbf{Descrizione}: le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze;
+			\item \textbf{Probabilità di occorrenza}: media;
+			\item \textbf{Grado di pericolosità}: alto;
+			\item \textbf{Riconoscimento}: il Responsabile ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
+			\item \textbf{Trattament}o: ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}: il rischio non si è ancora veriﬁcato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
+			\end{itemize}
+		\end{itemize}
+		\subsubsection{Rotture Hardware}
+		\begin{itemize}
+			\item \textbf{Descrizione}: la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell’intero \gloss{team}, rendendo così più difficile l’avanzamento;
+			\item \textbf{Probabilità di occorrenza}: bassa;
+			\item \textbf{Grado di pericolosità}: medio;
+			\item \textbf{Riconoscimento}: ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
+			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio caricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibilema per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su 					almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’Amministratore riportare tale macchina in uno stato 				funzionante nel minor tempo possibile; 
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}: il rischio non si è mai veriﬁcato.
+			\end{itemize}
+		\end{itemize}
+	\subsection{Livello del personale}
+		\subsubsection{Problemi tra componenti del team}
+		\begin{itemize}
+			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un 				clima non profiquo;
+			\item \textbf{Probabilità di occorrenza}: bassa;
+			\item \textbf{Grado di pericolosità}: alto;
+			\item \textbf{Riconoscimento}: il Responsabile deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia nascendo un dissidio fra uno o più membri;
+			\item \textbf{Trattamento}: il Responsabile provvederà, in caso di contrasti tra membri del gruppo, ad aﬃdare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all’interno del gruppo per avere un 				ambiente di lavoro il meno stressante possibile;
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}: il rischio non si è mai veriﬁcato.
+			\end{itemize}
+		\end{itemize}
+		\subsubsection{Problemi personali dei componenti del team}
+		\begin{itemize}
+			\item \textbf{Descrizione}: ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
+			\item \textbf{Probabilità di occorrenza}: media;
+			\item \textbf{Grado di pericolosità}: medio;
+			\item \textbf{Riconoscimento}: per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notiﬁcati al Responsabile in maniera preventiva e tempestiva gli impegni di ognuno;
+			\item \textbf{Trattamento}: ad ogni impegno notiﬁcato, il Responsabile si prenderà la responsabilità di eseguire una nuova parte di pianiﬁcazione del periodo problematico; 
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}: il rischio si è verificato un paio di volte a due membri del gruppo per problemi personali; nonostante ciò, il lavoro è stato portato al termine e non ci sono stati rallentamenti.
+			\end{itemize}
+		\end{itemize}
+		\subsubsection{Problemi di inesperienza}
+		\begin{itemize}
+			\item \textbf{Descrizione}: l’approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianicazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere 					apprese;
+			\item \textbf{Probabilità di occorrenza}: alta;
+			\item \textbf{Grado di pericolosità}: alto;
+			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al Responsabile che, una volta approvatone l’utilizzo nel progetto, demanderà al grupo il compito di documentarsi su come 			impiegarlo al meglio;
+			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l’utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse suﬃciente, il Responsabile dovrà 						preparare un piano di studi per compensare ogni tipo di lacuna;
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}:  il rischio si è veriﬁcato soprattutto nella prima fase.
+			\end{itemize}
+		\end{itemize}
+	\subsection{Livello organizzativo}
+		\subsubsection{Pianificazione Errata}
+		\begin{itemize}
+			\item \textbf{Descrizione}: durante la pianiﬁcazione è possibile che, a causa di assunzioni sbagliate, i tempi per l’esecuzione di alcune attività vengano calcolati in modo errato;
+			\item \textbf{Probabilità di occorrenza}: media;
+			\item \textbf{Grado di pericolosità}: alto;
+			\item \textbf{Riconoscimento}: la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di project management periodicamente, in modo da veriﬁcare eventuali ritardi nello sviluppo delle attività; 
+			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto; in tale maniera, un eventuale ritardo non inﬂuenzerà la durata totale del progetto; 
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
+			\end{itemize}
+		\end{itemize}
+	\subsection{Livello dei requisiti}
+		\subsubsection{Incomprensioni e scelte non congrue}
+		\begin{itemize}
+			\item \textbf{Descrizione}: durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli Analisti. Questo può provocare delle divergenze tra le aspettative del proponente e la 					visione del gruppo sul prodotto;
+			\item \textbf{Probabilità di occorrenza}: media;
+			\item \textbf{Grado di pericolosità}: alto;
+			\item \textbf{Riconoscimento}: si ritiene un’ottima strategia di controllo, l’incontro con il proponente stesso per poter discutere dei requisiti identicati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
+			\item \textbf{Trattamento}: sarà necessario eﬀettuare degli incontri con il proponente in modo da poter deﬁnire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e 					imprecisione 	che il committente individuerà alle revisioni. 
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato.
+			\end{itemize}
+		\end{itemize}
+	\subsection{Livello della valutazione dei costi}
+		\subsection{Errore nelle previsioni}
+		\begin{itemize}
+			\item \textbf{Descrizione}: è possibile che i tempi delle attività pianiﬁcate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
+			\item \textbf{Probabilità di occorrenza}: media;
+			\item \textbf{Grado di pericolosità}: medio;
+			\item \textbf{Riconoscimento}: quando un’attività occupa più tempo di quello previsto signiﬁca che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, signiﬁca che è stata sovrastimata. É necessario quindi che il 						Responsabile monitori con grande attenzione il programma di project management e che faccia tempestive modiﬁche alla pianiﬁcazione e al rendiconto dei costi; 
+			\item \textbf{Trattamento}: è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
+			\item \textbf{Attuazione nel periodo}:
+			\begin{itemize}
+				\item \textbf{Analisi dei requisit}i:  il rischio non si è mai verificato.
+			\end{itemize}
+		\end{itemize}
 \section{Pianificazione}
 [Si rimanda a Norme di progetto v_1_0_0 per il dettaglio del funzionamento di Asana]
 \section{Preventivo}
