--- a/doc/Esterni/Verbali/Verbali.tex
+++ b/doc/Esterni/Verbali/Verbali.tex
@@ -20,12 +20,12 @@
 \section{Riunione del 29 novembre 2016}
 
 \begin{itemize}
-	\item Orario: 13:30 - 15:30;
-	\item Durata: 2 ore;
-	\item Luogo incontro: Aula 1C150 di Torre Archimede; 
-	\item Oggetto: scelta del nome e del logo per il gruppo, scelta del capitolato d' appalto, degli strumenti per l'organizzazione e il versionamento che si andranno a utilizzare e definizione dei ruoli;
-	\item Segretario: \LB; 
-	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 13:30 - 15:30;
+	\item \textbf{Durata}: 2 ore;
+	\item \textbf{Luogo incontro}: Aula 1C150 di Torre Archimede; 
+	\item \textbf{Oggetto}: scelta del nome e del logo per il gruppo, scelta del capitolato d' appalto, degli strumenti per l'organizzazione e il versionamento che si andranno a utilizzare e definizione dei ruoli;
+	\item \textbf{Segretario}: \LB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione sono state prese le seguenti decisioni:
@@ -42,12 +42,12 @@ Infine abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione
 \section{Riunione del 12 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 13:30 - 15:00;
-	\item Durata: 1 ora 30 minuti;
-	\item Luogo incontro: Aula 1C150 di Torre Archimede; 
-	\item Oggetto: scelta degli strumenti per lo sviluppo del software e preparazione di domande da porre al proponente il 15 dicembre;
-	\item Segretario: \PB; 
-	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 13:30 - 15:00;
+	\item \textbf{Durata}: 1 ora 30 minuti;
+	\item \textbf{Luogo incontro}: Aula 1C150 di Torre Archimede; 
+	\item \textbf{Oggetto}: scelta degli strumenti per lo sviluppo del software e preparazione di domande da porre al proponente il 15 dicembre;
+	\item \textbf{Segretario}: \PB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione si è discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità. Per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{MySQL} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori. Sono stati inoltre analizzati alcuni software per il controllo del codice e dei documenti quali \gloss{Sonarqube} e \gloss{Travis} che si integra bene con \gloss{Github}, e altre tecnologie circa \gloss{java}, \gloss{javascript}, \gloss{javaDoc} ed infine \gloss{IntelliJIDEA}.
@@ -59,12 +59,12 @@ Sono state scelte le domande da proporre circa la definizione dei requisiti del 
 \section{Riunione del 15 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 14:30 - 17:00;
-	\item Durata: 2 ore 30 minuti;
-	\item Luogo incontro: \ZU, sede di via Cittadella 7, Padova; 
-	\item Oggetto: discussione del capitolato d' appalto;
-	\item Segretario: \LS; 
-	\item Partecipanti: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 14:30 - 17:00;
+	\item \textbf{Durata}: 2 ore 30 minuti;
+	\item \textbf{Luogo incontro}: \ZU, sede di via Cittadella 7, Padova; 
+	\item \textbf{Oggetto}: discussione del capitolato d' appalto;
+	\item \textbf{Segretario}: \LS; 
+	\item \textbf{Partecipanti}: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi software che il nostro editor dovrà modellare dev' essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (applicazione web o desktop).
@@ -74,12 +74,12 @@ Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardan
 \section{Riunione del 20 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 14:30 - 17:00;
-	\item Durata: 2 ore 30 minuti;
-	\item Luogo incontro: Aula P4 Paolotti; 
-	\item Oggetto: scelta del dominio applicativo e analisi dei casi d' uso generali;
-	\item Segretario: \PB; 
-	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 14:30 - 17:00;
+	\item \textbf{Durata}: 2 ore 30 minuti;
+	\item \textbf{Luogo incontro}: Aula P4 Paolotti; 
+	\item \textbf{Oggetto}: scelta del dominio applicativo e analisi dei casi d' uso generali;
+	\item \textbf{Segretario}: \PB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione è stato scelto di realizzare una webapp con \gloss{HTML5},\gloss{CSS3} e JavaScript per il \gloss{lato client} che genera codice \gloss{Java} e dopo varie proposte il dominio applicativo del software da realizzare è risultato "giochi da tavolo". 
@@ -90,12 +90,12 @@ Sono stati analizzati i casi d' uso generali che hanno fatto sorgere domande esp
 \section{Riunione del 21 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 14:30 - 16:00;
-	\item Durata: 1 ore 30 minuti;
-	\item Luogo incontro: \ZU, sede di via Cittadella 7, Padova; 
-	\item Oggetto: discussione del capitolato d' appalto;
-	\item Segretario: \AZ; 
-	\item Partecipanti: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 14:30 - 16:00;
+	\item \textbf{Durata}: 1 ore 30 minuti;
+	\item \textbf{Luogo incontro}: \ZU, sede di via Cittadella 7, Padova; 
+	\item \textbf{Oggetto}: discussione del capitolato d' appalto;
+	\item \textbf{Segretario}: \AZ; 
+	\item \textbf{Partecipanti}: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione è stato chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto; inoltre è sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal software. Il diagramma delle attività sarà ispirato al \gloss{diagramma Nassi–Shneiderman} utilizzando una rappresentazione "a blocchi".
@@ -105,12 +105,12 @@ Durante la riunione è stato chiarito il concetto di stereotipo e dove poter uti
 \section{Riunione del 22 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 11:30 - 13:30;
-	\item Durata: 2 ore;
-	\item Luogo incontro: 2AB45 di Torre Archimede; 
-	\item Oggetto: discussione dei casi d' uso;
-	\item Segretario: \PB; 
-	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 11:30 - 13:30;
+	\item \textbf{Durata}: 2 ore;
+	\item \textbf{Luogo incontro}: 2AB45 di Torre Archimede; 
+	\item \textbf{Oggetto}: discussione dei casi d' uso;
+	\item \textbf{Segretario}: \PB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione sono stati analizzati una parte dei casi d' uso e dei requisiti sorti dalla riunione precedente col proponente.
@@ -119,12 +119,12 @@ Durante la riunione sono stati analizzati una parte dei casi d' uso e dei requis
 \section{Riunione del 23 dicembre 2016}
 
 \begin{itemize}
-	\item Orario: 15:00 - 18:00;
-	\item Durata: 3 ore;
-	\item Luogo incontro: 2AB45 di Torre Archimede; 
-	\item Oggetto: discussione dei casi d' uso;
-	\item Segretario: \PB; 
-	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+	\item \textbf{Orario}: 15:00 - 18:00;
+	\item \textbf{Durata}: 3 ore;
+	\item \textbf{Luogo incontro}: 2AB45 di Torre Archimede; 
+	\item \textbf{Oggetto}: discussione dei casi d' uso;
+	\item \textbf{Segretario}: \PB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione sono stati analizzati i casi d' uso, in particolar modo riguardo la parte del diagramma delle attività.
