--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -4,6 +4,7 @@
 
 \newcommand{\NdP}{Norme\_di\_progetto\_v\_0\_0\_3}
 \newcommand{\Verbali}{Verbali}
+\newcommand{\AdR}{Analisi\_dei\_requisiti\_0\_0\_0}
 \newcommand{\SdF}{Studio\_di\_fattibilita\_0\_0\_0}
 \newcommand{\PdP}{Piano\_di\_progetto\_v\_0\_0\_1}
 \newcommand{\PdQ}{Piano\_di\_qualifica\_0\_0\_0}
