--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -36,15 +36,18 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\begin{itemize}
 		\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
 		\end{itemize}
-\section{Processo di sviluppo}
 
-	\subsection{Studio di fattibilità}
+\section{Processi primari}
+
+\subsection{Processo di sviluppo}
+
+	\subsubsection{Studio di fattibilità}
 	La fase antecedente alla realizzazione del progetto\ped{g} consiste nel fissare delle riunioni in modo che il team\ped{g} possa discutere di esso. Sarà poi compito degli analisti redigere lo \texttt{studio di fattibilità},la cui struttura è specificata a seguire: %inserire struttura studio di fattibilità
-	\subsection{Analisi dei requisiti}
+	\subsubsection{Analisi dei requisiti}
 	Sarà sempre compito degli analisti al termine dello studio di fattibilità di produrre l'\texttt{analisi dei requisiti}.Questo documento conterrà i requisiti raccolti ed i casi uso individuati nelle riunioni svolte.
 	Viene elencata nelle sezioni a seguire la struttura obbligatoria di requisiti e casi d'uso.
-		\subsubsection{Requisiti}
-		\subsubsection{Casi d'uso}
+		\paragraph{Requisiti}
+		\paragraph{Casi d'uso}
 		Ogni caso d'uso viene identificato nel seguente modo:
 		\centerline{UCx}
 		Ogni macro caso d'uso sarai poi analizzato in modo più specifico ed identificato da UC[p].[f] dove p indica il il caso d'uso padre e f il figlio(ogni figlio potrà a sua volta avere altri figli).
@@ -60,21 +63,20 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\item Estensioni se specificate;
 		\item Scenari alternativi che descrive esse tramite casi d'uso non presenti tra i figli.
 		\end{itemize}
-	\subsection{Progettazione}
+	\subsubsection{Progettazione}
 	Il compito dei progettisti consiste di progettare l'architettura del software. % da completare.
 	
-	\subsection{Codifica}
-		\subsubsection{Formattazione del codice}
-	\subsection{Strumenti}
-		\subsubsection{PragmaDB}
+	\subsubsection{Codifica}
+		\paragraph{Formattazione del codice}
+	\subsubsection{Strumenti}
+		\paragraph{PragmaDB}
 		Per tenere traccia dei casi d'uso e dei requisiti il team\ped{g} ha scelto di usare PragmaDB(https://github.com/StefanoMunari/PragmaDB) creato da studenti degli anni passati. Essa è accessibile via broswer nel server dedicato tramite autenticazione.Inoltre permette l'esportazione in \LaTeX{} delle tabelle.
-		\subsubsection{Astah}
-		\subsubsection{Ide ancora da scegliere}
-	\subsection{Tecnologie utilizzate}
-	\subsubsection{HTML5}
-	\subsubsection{CSS3}
-	\subsubsection{Javascript}
-	\subsubsection{Java tomcat o node.js}
+		\paragraph{Astah}
+		\paragraph{Ide ancora da scegliere}
+
+\subsection{Processo di fornitura}
+
+[norme sullo studio di fattibilità]
 
 \section{Processi di supporto}
 I processi normati in questa sezione hanno la funzione di aiutare gli altri processi.
