fixati alcuni caratteri strani in piano progetto, aggiunta riga usepackage lmodern per la compilazione dei file tex

--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -8,6 +8,9 @@
 \usepackage[english,italian]{babel}
 \usepackage{hyperref}
 \usepackage{microtype}
+\usepackage{lmodern} %compila cosi?
+
+
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-vers}
 \usepackage{../../util/hx-front}
