--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
@@ -47,7 +47,7 @@
 
 	La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa infatti si deriva tutta la struttura principale con cui saranno pianificati milestone e task.
 
-	Il progetto {\proj}, come affrontato nel documento [x] e [y], presenta numerosi punti critici, analizzati nella sezione [nextsection], in particolare nella sezione [rischio tecnologico]. Generalmente {\proj} richiede una intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software \gloss{CASE} e alla loro risoluzione, tenendo conto del quantitativo di risorse assegnate al progetto. [riferimento a verbale di riunione con zucchetti?]
+	Il progetto {\proj}, come affrontato nel documento [x] e [y], presenta numerosi punti critici, analizzati nella sezione [nextsection], in particolare nella sezione [rischio tecnologico]. Generalmente {\proj} richiede una intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software \gloss{CASE} e alla loro risoluzione, tenendo conto del quantitativo di risorse assegnate al progetto. %[riferimento a verbale di riunione con zucchetti?]
 
 	Un progetto dedito all'esplorazione va supportato con un adeguato modello di sviluppo; esso deve avere i seguenti requisiti:
 
@@ -121,6 +121,7 @@ I vantaggi di questo modello sono molteplici:
 
 Vanno segnalati tuttavia i seguenti difetti:
 \begin{itemize}
+\item a
 \end{itemize}
 
 In complesso, il \gloss{team} ritiene che il modello incrementale apporti sostanziali vantaggi rispetto agli altri modelli finora analizzati. In seguito si analizzano altri modelli che sono stati presi in considerazione.
@@ -180,32 +181,32 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item \textbf{Trattament}o: ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è ancora veriﬁcato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
+				\item \textbf{Analisi dei requisiti}: il rischio non si è ancora verificato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
 			\end{itemize}
 		\end{itemize}
 		\subsubsection{Rotture Hardware}
 		\begin{itemize}
-			\item \textbf{Descrizione}: la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell’intero \gloss{team}, rendendo così più difficile l’avanzamento;
+			\item \textbf{Descrizione}: la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero \gloss{team}, rendendo così più difficile l'avanzamento;
 			\item \textbf{Probabilità di occorrenza}: bassa;
 			\item \textbf{Grado di pericolosità}: medio;
 			\item \textbf{Riconoscimento}: ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
-			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio caricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibilema per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su 					almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’Amministratore riportare tale macchina in uno stato 				funzionante nel minor tempo possibile; 
+			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio scaricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile ma per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su 					almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’Amministratore riportare tale macchina in uno stato 				funzionante nel minor tempo possibile; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è mai veriﬁcato.
+				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
 			\end{itemize}
 		\end{itemize}
 	\subsection{Livello del personale}
 		\subsubsection{Problemi tra componenti del team}
 		\begin{itemize}
-			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un 				clima non profiquo;
+			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un 				clima non proficuo;
 			\item \textbf{Probabilità di occorrenza}: bassa;
 			\item \textbf{Grado di pericolosità}: alto;
 			\item \textbf{Riconoscimento}: il Responsabile deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia nascendo un dissidio fra uno o più membri;
-			\item \textbf{Trattamento}: il Responsabile provvederà, in caso di contrasti tra membri del gruppo, ad aﬃdare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all’interno del gruppo per avere un 				ambiente di lavoro il meno stressante possibile;
+			\item \textbf{Trattamento}: il Responsabile provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un 				ambiente di lavoro il meno stressante possibile;
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}: il rischio non si è mai veriﬁcato.
+				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
 			\end{itemize}
 		\end{itemize}
 		\subsubsection{Problemi personali dei componenti del team}
@@ -213,8 +214,8 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item \textbf{Descrizione}: ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notiﬁcati al Responsabile in maniera preventiva e tempestiva gli impegni di ognuno;
-			\item \textbf{Trattamento}: ad ogni impegno notiﬁcato, il Responsabile si prenderà la responsabilità di eseguire una nuova parte di pianiﬁcazione del periodo problematico; 
+			\item \textbf{Riconoscimento}: per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al Responsabile in maniera preventiva e tempestiva gli impegni di ognuno;
+			\item \textbf{Trattamento}: ad ogni impegno notificato, il Responsabile si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}: il rischio si è verificato un paio di volte a due membri del gruppo per problemi personali; nonostante ciò, il lavoro è stato portato al termine e non ci sono stati rallentamenti.
@@ -222,24 +223,24 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 		\end{itemize}
 		\subsubsection{Problemi di inesperienza}
 		\begin{itemize}
-			\item \textbf{Descrizione}: l’approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianicazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere 					apprese;
+			\item \textbf{Descrizione}: l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere 					apprese;
 			\item \textbf{Probabilità di occorrenza}: alta;
 			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al Responsabile che, una volta approvatone l’utilizzo nel progetto, demanderà al grupo il compito di documentarsi su come 			impiegarlo al meglio;
-			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l’utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse suﬃciente, il Responsabile dovrà 						preparare un piano di studi per compensare ogni tipo di lacuna;
+			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al Responsabile che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 			impiegarlo al meglio;
+			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il Responsabile dovrà 						preparare un piano di studi per compensare ogni tipo di lacuna;
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
-				\item \textbf{Analisi dei requisiti}:  il rischio si è veriﬁcato soprattutto nella prima fase.
+				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato soprattutto nella prima fase.
 			\end{itemize}
 		\end{itemize}
 	\subsection{Livello organizzativo}
 		\subsubsection{Pianificazione Errata}
 		\begin{itemize}
-			\item \textbf{Descrizione}: durante la pianiﬁcazione è possibile che, a causa di assunzioni sbagliate, i tempi per l’esecuzione di alcune attività vengano calcolati in modo errato;
+			\item \textbf{Descrizione}: durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato;
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di project management periodicamente, in modo da veriﬁcare eventuali ritardi nello sviluppo delle attività; 
-			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto; in tale maniera, un eventuale ritardo non inﬂuenzerà la durata totale del progetto; 
+			\item \textbf{Riconoscimento}: la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di project management periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
+			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
@@ -251,8 +252,8 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item \textbf{Descrizione}: durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli Analisti. Questo può provocare delle divergenze tra le aspettative del proponente e la 					visione del gruppo sul prodotto;
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: si ritiene un’ottima strategia di controllo, l’incontro con il proponente stesso per poter discutere dei requisiti identicati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
-			\item \textbf{Trattamento}: sarà necessario eﬀettuare degli incontri con il proponente in modo da poter deﬁnire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e 					imprecisione 	che il committente individuerà alle revisioni. 
+			\item \textbf{Riconoscimento}: si ritiene un'ottima strategia di controllo, l'incontro con il proponente stesso per poter discutere dei requisiti identificati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
+			\item \textbf{Trattamento}: sarà necessario effettuare degli incontri con il proponente in modo da poter definire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e 					imprecisione 	che il committente individuerà alle revisioni. 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato.
@@ -261,14 +262,14 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 	\subsection{Livello della valutazione dei costi}
 		\subsection{Errore nelle previsioni}
 		\begin{itemize}
-			\item \textbf{Descrizione}: è possibile che i tempi delle attività pianiﬁcate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
+			\item \textbf{Descrizione}: è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: quando un’attività occupa più tempo di quello previsto signiﬁca che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, signiﬁca che è stata sovrastimata. É necessario quindi che il 						Responsabile monitori con grande attenzione il programma di project management e che faccia tempestive modiﬁche alla pianiﬁcazione e al rendiconto dei costi; 
+			\item \textbf{Riconoscimento}: quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il 						Responsabile monitori con grande attenzione il programma di project management e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
 			\item \textbf{Trattamento}: è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
-				\item \textbf{Analisi dei requisit}i:  il rischio non si è mai verificato.
+				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
 			\end{itemize}
 		\end{itemize}
 \section{Pianificazione}
