iniziato lavoro sul glossario

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -137,7 +137,7 @@ L'evidenziazione di un termine va fatta con \texttt{\textbackslash emph\{\}}. Og
 \section{Processi organizzativi}
 
 \subsection{Processo di miglioramento} % da ISO 12207-1995; pensavo fosse importante quindi l'ho aggiunto
-Man mano che si procede nel progetto, è bene stare attenti a non lasciare che le attività ripetitive degradino in qualità. Ogni processo, essendo un insieme di attività che si ripetono, deve quindi abbracciare il modello \gloss{PDCA}. % come? 
+Man mano che si procede nel progetto, è bene stare attenti a non lasciare che le attività ripetitive degradino in qualità. Ogni processo, essendo un insieme di attività che si ripetono, deve quindi abbracciare il modello \gloss{PDCA} [...]. Ogni volta che un documento verrà verificato, i verificatori discuteranno con il responsabile la possibilità di segnalare a tutto il gruppo gli errori più ricorrenti.
 
 \subsection{Strumenti}
 
