aggiornamento diario piano di progetto

--- a/doc/Esterni/Verbali/Verbali.tex
+++ b/doc/Esterni/Verbali/Verbali.tex
@@ -1,7 +1,7 @@
 % Tutti i verbali di riunione
 % da compilare con il comando pdflatex Esterni/Verbali/Verbali.tex
 
-\input{util/hx-ambiente}
+\input{../../util/hx-ambiente}
 
 \version{0.0.2}
 \creaz{1 dicembre 2016}
