--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -7,3 +7,15 @@
 	0.0.1 & {\LB} Responsabile & 25/12/2016 & Stesura scheletro \\ \hline
 	\end{tabular}
 \end{center}
+\begin{center}
+	\begin{tabular}{cp{3cm}cp{3cm}}
+	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
+	0.0.2 & {\LB} Responsabile & 27/12/2016 &  Inizio stesura Modello di sviluppo  \\ \hline
+	\end{tabular}
+\end{center}
+\begin{center}
+	\begin{tabular}{cp{3cm}cp{3cm}}
+	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
+	0.0.3 & {\PB} Responsabile & 27/12/2016 & Stesura Analisi dei Rischi\\ \hline
+	\end{tabular}
+\end{center}
